<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/settings_background">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/nap_option_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/my_switch"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="@+id/vibrate_switch"
        app:layout_constraintStart_toStartOf="@+id/vibrate_switch" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/vibrate_long"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/vibrate_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/my_switch"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/theme_switch"
        app:layout_constraintStart_toStartOf="@+id/theme_switch" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/theme_mode"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/theme_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/my_switch"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/select_song"
        app:layout_constraintStart_toStartOf="@+id/select_song" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/alarm_sound"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/select_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:text="TextView"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/nap_time_l"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/close_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#00ffffff"
        android:text="@string/save_and_close"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <cn.carbswang.android.numberpickerview.library.NumberPickerView
        android:id="@+id/nap_length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="@+id/vibrate_switch"
        app:layout_constraintStart_toStartOf="@+id/vibrate_switch"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        app:npv_DividerColor="@color/selected_checkbox_color"
        app:npv_ItemPaddingVertical="4dp"
        app:npv_TextColorHint="@color/textColor"
        app:npv_TextColorNormal="@color/numbersBackgroundColor"
        app:npv_TextColorSelected="@color/textColor"
        app:npv_TextSizeNormal="10sp"
        app:npv_TextSizeSelected="22sp" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/turn_off_after"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/close_settings"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <cn.carbswang.android.numberpickerview.library.NumberPickerView
        android:id="@+id/turnoff_timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/nap_length"
        app:layout_constraintStart_toStartOf="@+id/nap_length"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:npv_DividerColor="@color/selected_checkbox_color"
        app:npv_ItemPaddingVertical="4dp"
        app:npv_TextColorHint="@color/textColor"
        app:npv_TextColorNormal="@color/numbersBackgroundColor"
        app:npv_TextColorSelected="@color/textColor"
        app:npv_TextSizeNormal="10sp"
        app:npv_TextSizeSelected="22sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/seconds"
        android:textColor="@color/textColor"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/turnoff_timer" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/minutes"
        android:textColor="@color/textColor"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/nap_length" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/nap_option"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>